Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-1449

C++ broker on Windows with --mgmt-enable no triggers crash setting up client

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • M4
    • C++ Broker
    • None
    • Windows

    Description

      If the C++ broker is started on Windows with --mgmt-enable no, the exchange to set up a new client causes an assert in the C++ library. This is because the federation tag doesn't have an associated string - when encoding the value for qpid.federation_tag, the value is invalid.

      When running on Linux with the same option, the qpid.federation_tag value is an empty string.

      Attachments

        1. FieldValue.h.diff
          0.9 kB
          Stephen D. Huston

        Activity

          People

            shuston Stephen D. Huston
            shuston Stephen D. Huston
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: