QPID-1449 - Added federation tag that was missing when management was disabled

git-svn-id: https://svn.apache.org/repos/asf/incubator/qpid/trunk/qpid@725456 13f79535-47bb-0310-9956-ffa450edef68